feat: get-and-post

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/foods
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=wendelreis
+spring.datasource.password=8446
